package edu.fiuba.algo3.modelo.Acceso;

public interface EstadoOperativoAcceso {
    boolean transportarTropas();
}
