package edu.fiuba.algo3.modelo.Espiral;

public interface EstadoOperativoEspiral {
    boolean crear();
}
