package edu.fiuba.algo3.modelo;

public interface EstadoOperativoExtractor {
    void guardarZangano(Zangano unZangano);
    int extraerGas();
}
