package edu.fiuba.algo3.modelo.Guarida;

public interface EstadoOperativoGuarida {
    boolean evolucionarLarva();
}
