package edu.fiuba.algo3.modelo.NexoMineral;

public interface EstadoOperativoNexoMineral {

    int recolectarMineral();
}