package edu.fiuba.algo3.modelo.Pilon;

public interface EstadoOperativoPilon {

    boolean energizar();

    int recibirAtaque(int cantidad);
}
