package edu.fiuba.algo3.modelo.ReservaDeProduccion;

public interface EstadoOperativoReservaDeProduccion {
    boolean evolucionarLarva();
}
